--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
     "typescript": "^4.3.5",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "zustand": "^3.5.9"
   },
   "scripts": {
     "start": "react-scripts start",
